[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/DiplomacyPanel.gd" id="1"]

[node name="DiplomacyPanel" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -220.0
offset_right = 320.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Diplomacy"

[node name="CloseButton" type="Button" parent="VBox/TitleBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="Separator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Separator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="InfoPanel" type="RichTextLabel" parent="VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
bbcode_enabled = true
text = "Select a civilization to view details."
fit_content = true
